# rag-chatbot-production

./: .env.deploy.example  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT-GRAPH-VIZ.md  DEPLOYMENT.md  DEVLOG.md  Dockerfile  IMPLEMENTATION-SUMMARY.md  README.md  deploy.ps1  deploy.sh  docker-compose.yml  ecosystem.config.js  nginx-compliance-viz.conf  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml
conductor/: product.md  tech-stack.md  tracks.md
conductor/tracks/ui-refinement/: index.md  metadata.json  plan.md  spec.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ComplianceGraph.tsx  ComplianceSummary.tsx  FilterPanel.tsx  NodeDetailsModal.tsx  UploadSection.tsx
src/: __init__.py  config.py
src/agent/: __init__.py  graph.py
src/api/: main.py
src/ingestion/: __init__.py  chunker.py  embedder.py  loader.py
src/retrieval/: __init__.py  store.py
src/ui/: app.py
terraform/hcloud/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_basic.py
