[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-local"
version = "0.1.0"
description = "RAG documentaire 100% local avec LangGraph, ChromaDB et Ollama"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "RAG Local Team"}
]
dependencies = [
    # LLM & Embeddings
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-chroma>=0.1.4",
    "langgraph>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    # Vector Store
    "chromadb==0.5.20",
    # Document Processing
    "pymupdf>=1.24.0",
    "markdown>=3.6",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    # API & UI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.38.0",
    "python-multipart>=0.0.9",
    # Configuration
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Utilities
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-Markdown>=3.6",
    "pre-commit>=3.8.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["src/ui/app\\.py"]
plugins = ["pydantic.mypy"]

[tool.bandit]
skips = [
    "B104",   # hardcoded_bind_all_interfaces — intentional for Docker (0.0.0.0)
    "B105",   # hardcoded_password_string — false positives on error message dicts
    "B110",   # try_except_pass — intentional for non-critical UI feedback
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
